--- a/src_winapi/resources.rc
+++ b/src_winapi/resources.rc
@@ -12,3 +12,6 @@ BEGIN
     VK_OEM_MINUS, CONTROL_MENU_DECREASE_INTERPOLATION, VIRTKEY
     VK_SUBTRACT,  CONTROL_MENU_DECREASE_INTERPOLATION, VIRTKEY
 END
+
+#define RT_MANIFEST 24
+1 RT_MANIFEST manifest.manifest
