--- a/src_winapi/resources.rc
+++ b/src_winapi/resources.rc
@@ -1,6 +1,7 @@
 #include "resources.h"
 
 IDI_ICON1 ICON DISCARDABLE "../resources/icon.ico"
+IDI_LOGO64 BITMAP DISCARDABLE "../resources/icon_64.bmp"
 
 APP_ACCELERATORS ACCELERATORS 
 BEGIN
