Дополнил сборочные скрипты

--- a/src_qt/resources.rc
+++ b/src_qt/resources.rc
@@ -11,7 +11,7 @@ IDI_ICON1 ICON DISCARDABLE "../resources/icon.ico"
 #define VER_LEGALCOPYRIGHT_STR      "Copyright (c) 2014-2015, Peter Zhigalov"
 #define VER_ORIGINALFILENAME_STR    "fem_draw_qt.exe"
 #define VER_PRODUCTNAME_STR         "FEM Draw (Qt)"
-#define VER_COMPANYNAME_STR         "Peter Zhigalov <peter.zhigalov@gmail.com>"
+#define VER_COMPANYNAME_STR         "Peter Zhigalov"
 
 VS_VERSION_INFO VERSIONINFO
 FILEVERSION     VER_FILEVERSION
