--- a/src_winapi/resources.rc
+++ b/src_winapi/resources.rc
@@ -6,10 +6,10 @@ IDC_HAND_FB CURSOR DISCARDABLE "../resources/hand.cur"
 
 APP_ACCELERATORS ACCELERATORS 
 BEGIN
-    0x4F, CONTROL_MENU_OPEN, VIRTKEY, CONTROL
-    "^C", CONTROL_MENU_COPY, VIRTKEY, CONTROL
-    0x53, CONTROL_MENU_SAVE, VIRTKEY, CONTROL
-    0x51, CONTROL_MENU_EXIT, VIRTKEY, CONTROL
+    "O", CONTROL_MENU_OPEN, VIRTKEY, CONTROL
+    "C", CONTROL_MENU_COPY, VIRTKEY, CONTROL
+    "S", CONTROL_MENU_SAVE, VIRTKEY, CONTROL
+    "Q", CONTROL_MENU_EXIT, VIRTKEY, CONTROL
     VK_OEM_PLUS,  CONTROL_MENU_INCREASE_INTERPOLATION, VIRTKEY
     VK_ADD,       CONTROL_MENU_INCREASE_INTERPOLATION, VIRTKEY
     VK_OEM_MINUS, CONTROL_MENU_DECREASE_INTERPOLATION, VIRTKEY
