--- a/resources/Info.plist
+++ b/resources/Info.plist
@@ -33,7 +33,7 @@
 		<string>x86_64</string>
 	</array>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.7.0</string>
+	<string>10.6.0</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright (c) 2014-2016, Peter Zhigalov</string>
 	<key>CFBundleDocumentTypes</key>
@@ -47,7 +47,7 @@
 				<string>plt</string>
 			</array>
 			<key>CFBundleTypeName</key>
-			<string>Qt UI File</string>
+			<string>Tecplot Data File</string>
 		</dict>
 	</array>
 </dict>
