--- a/src_qt/resources.rc
+++ b/src_qt/resources.rc
@@ -8,10 +8,10 @@ IDI_ICON1 ICON DISCARDABLE "../resources/icon.ico"
 #define VER_PRODUCTVERSION_STR      "1.7\0"
 #define VER_FILEDESCRIPTION_STR     "Tool for plot scalar and vector fields"
 #define VER_INTERNALNAME_STR        "fem_draw_qt"
-#define VER_LEGALCOPYRIGHT_STR      "Copyright (c) 2014-2016, Peter Zhigalov"
+#define VER_LEGALCOPYRIGHT_STR      "(c) Peter Zhigalov, 2014-2016"
 #define VER_ORIGINALFILENAME_STR    "fem_draw_qt.exe"
 #define VER_PRODUCTNAME_STR         "FEM Draw (Qt)"
-#define VER_COMPANYNAME_STR         "Peter Zhigalov"
+#define VER_COMPANYNAME_STR         "FAMI Net Team"
 
 VS_VERSION_INFO VERSIONINFO
 FILEVERSION     VER_FILEVERSION
