--- a/src_winapi/resources.rc
+++ b/src_winapi/resources.rc
@@ -25,10 +25,10 @@ END
 #define VER_PRODUCTVERSION_STR      "1.7\0"
 #define VER_FILEDESCRIPTION_STR     "Tool for plot scalar and vector fields"
 #define VER_INTERNALNAME_STR        "fem_draw_winapi"
-#define VER_LEGALCOPYRIGHT_STR      "Copyright (c) 2014-2016, Peter Zhigalov"
+#define VER_LEGALCOPYRIGHT_STR      "(c) Peter Zhigalov, 2014-2016"
 #define VER_ORIGINALFILENAME_STR    "fem_draw_winapi.exe"
 #define VER_PRODUCTNAME_STR         "FEM Draw (WinAPI)"
-#define VER_COMPANYNAME_STR         "Peter Zhigalov"
+#define VER_COMPANYNAME_STR         "FAMI Net Team"
 
 VS_VERSION_INFO VERSIONINFO
 FILEVERSION     VER_FILEVERSION
